# rsplayer_firmware

./: Cargo.toml  Makefile.toml  README.md
.cargo/: config.toml
src/: amanero.rs  dac.rs  display.rs  flash.rs  fmtbuf.rs  gpio.rs  i2c_helper.rs  io.rs  ir.rs  main.rs  rotary.rs  rsplayer.rs  uart_serial.rs  usb.rs
src/dac/: ak4490.rs  ak4497.rs  common.rs
src/display/: ili9488.rs  st7920.rs
