[package]
name = "rsplayer_firmware"
version = "0.1.0"
edition = "2021"
[[bin]]
name = "rsplayer_firmware"
test = false
bench = false

[dependencies]
embassy-sync = { version = "0.7.2", features = ["defmt"] }
embassy-executor = { version = "0.9.0", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-time = { version = "0.5.0", features = [ "defmt", "defmt-timestamp-uptime", ] }
embassy-rp = { version = "0.8.0", features = [ "defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp2040" ] }
embassy-usb = { version = "0.5.1", features = ["defmt"] }
embassy-futures = { version = "0.1.2" }

defmt = "1.0.1"
defmt-rtt = "1.0.0"

cortex-m-rt = "0.7.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }

embedded-hal-1 = { package = "embedded-hal", version = "1.0" }
embedded-hal-bus = { version = "0.1", features = ["async"] }
static_cell = "2.1"
portable-atomic = { version = "1.5", features = ["critical-section"] }

infrared = "0.14.2"

assign-resources = { git = "https://github.com/adamgreig/assign-resources", rev = "bd22cb7a92031fb16f74a5da42469d466c33383e" }

embedded-graphics = "0.8.1"
u8g2-fonts = { version = "0.6.0", features = ["embedded_graphics_textstyle"] }
st7920 = { version = "0.4.1" }
heapless = "0.8.0"
micromath = "2.1.0"

[profile.release]
debug = 2
lto = true
opt-level = 'z'

[profile.dev]
debug = 2
lto = true
opt-level = "z"

[patch.crates-io]
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", tag = "embassy-rp-v0.8.0" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy.git", tag = "embassy-rp-v0.8.0" }
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", tag = "embassy-rp-v0.8.0" }
embassy-time-driver = { git = "https://github.com/embassy-rs/embassy.git", tag = "embassy-rp-v0.8.0" }
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy.git", tag = "embassy-rp-v0.8.0" }
embassy-rp = { git = "https://github.com/embassy-rs/embassy.git", tag = "embassy-rp-v0.8.0" }
embassy-usb = { git = "https://github.com/embassy-rs/embassy.git", tag = "embassy-rp-v0.8.0" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy.git", tag = "embassy-rp-v0.8.0" }
